<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
<RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#F1F2F2" >

    <!--
                 android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
    -->

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:textSize="@dimen/text_size"
        android:text="@string/saver_options"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView1"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:textSize="@dimen/chk_text_small"
        android:background="#FFFFFF"
        android:enabled="false"
        android:text="@string/note"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#000000" />

    <ImageView
        android:id="@+id/gray_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/note"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:src="@android:color/darker_gray" />
    
    <CheckBox
        android:id="@+id/chk_selectall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/gray_line"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textSize="@dimen/chk_text"
        android:text="@string/select_all"
        android:visibility="gone"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
    <CheckBox
        android:id="@+id/checkBox3enablewifi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/chk_selectall"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textSize="@dimen/chk_text"
        android:text="@string/wifi"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <CheckBox
        android:id="@+id/checkBox5enablecellulardata"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/checkBox3enablewifi"
        android:textSize="@dimen/chk_text"
        android:visibility="gone"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/cellular_data"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
    <CheckBox
        android:id="@+id/checkBox2enablebluetooth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/checkBox5enablecellulardata"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textSize="@dimen/chk_text"
        android:text="@string/bluetooth"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <CheckBox
        android:id="@+id/checkBox1enablebrightness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/checkBox2enablebluetooth"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textSize="@dimen/chk_text"
        android:text="@string/low_brightness"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    

    

    <CheckBox
        android:id="@+id/checkBox8enablekillapp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/checkBox1enablebrightness"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textSize="@dimen/chk_text"
        android:text="@string/kill_all"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <!-- <RelativeLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"> -->
        
    <Button
        android:id="@+id/button1enableSet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/kill_selected"
        android:background="@color/shakti_blue"
        android:layout_below="@id/checkBox8enablekillapp"
        android:textSize="@dimen/chk_text"
        android:textColor="#FFFFFF"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    <!-- </RelativeLayout> -->

</RelativeLayout>
</ScrollView>