<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" > 

     <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
       >
        
        <!-- <TextView
                android:id="@+id/title_nouse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                
                android:text="@string/whom_to_send"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold" /> -->

        <!-- <CheckBox
            android:id="@+id/checkBoxPoliceSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/send_police"
            android:textAppearance="?android:attr/textAppearanceSmall" /> -->

        <!-- <CheckBox
            android:id="@+id/checkBoxContactSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/send_emergency"
            android:textAppearance="?android:attr/textAppearanceSmall" /> -->

        <!-- <LinearLayout
            android:id="@+id/partLinearSend"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="visible" > -->

            <TextView
                android:id="@+id/title_nouse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/quick_send"
                android:textSize="@dimen/text_size"
                />
            
            <Button
                android:id="@+id/button1Quicksend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/emergency_sms"
                android:background="#FF7700"
                android:layout_below="@id/title_nouse"
                android:textSize="@dimen/chk_text"
                android:textColor="#FFFFFF"
                 />
            <TextView
				android:id="@+id/or"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_below="@id/gray_line"
                android:text="Or Create New"
                android:textSize="@dimen/text_size"
                />
            <ImageView android:id="@+id/gray_line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:layout_below="@id/button1Quicksend"
                android:src="@android:color/darker_gray"/>

            <!-- <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="OR CUSTOMIZE BELOW AND SEND"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold" /> -->
                
            <CheckBox
                android:id="@+id/chck_selectall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/select_all"
                android:layout_below="@id/or"
                android:visibility="gone"
                android:textSize="@dimen/chk_text"
                />

            <CheckBox
                android:id="@+id/checkBoxLocationsend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/system_location"
                android:layout_below="@id/chck_selectall"
                android:textSize="@dimen/chk_text"
                android:enabled="false"
                 />
            
            <CheckBox
                android:id="@+id/checkBoxBatterySend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/low_battery"
                android:layout_below="@id/checkBoxLocationsend"
                android:textSize="@dimen/chk_text"
                 />

            <CheckBox
                android:id="@+id/checkBoxPickMeSend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wait_here"
                android:layout_below="@id/checkBoxBatterySend"
                android:textSize="@dimen/chk_text"
                 />
            
            <CheckBox
                android:id="@+id/checkBoxDontCallSend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_safe"
                android:layout_below="@id/checkBoxPickMeSend"
                android:textSize="@dimen/chk_text"
                 />

            

            
		<!-- 	<RelativeLayout android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_alignParentBottom="true"> -->
			    
            <EditText
                android:id="@+id/editTextMessagesend"
                android:textSize="@dimen/chk_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/checkBoxDontCallSend"
                android:hint="@string/hint"
                android:textAppearance="?android:attr/textAppearanceSmall" >
            </EditText>

            <Button
                android:id="@+id/button2CustomizeSend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                
                android:layout_marginBottom="10dp"
                android:text="@string/send"
                android:background="@color/shakti_blue"
                android:layout_below="@id/editTextMessagesend"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/chk_text"
                android:textAppearance="?android:attr/textAppearanceSmall" />

			<!-- </RelativeLayout> -->
        <!-- </LinearLayout> -->
        <!-- <View
            android:id="@+id/firstDivider"
            android:layout_width="fill_parent"
            android:paddingTop="10dp"
            android:layout_height="2dp"
            android:background="#cfcfcf" />
            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="CALL EMERGENCY NUMBER"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button1sendmulti"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TAP TO CALL"
                android:textAppearance="?android:attr/textAppearanceSmall" /> -->
    </RelativeLayout>

</ScrollView> 