<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1F2F2"
    android:padding="10dp"
    android:orientation="vertical" >

    <TextView android:id="@+id/prefs_option"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size"
        android:text="@string/prefs_option"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:textSize="@dimen/chk_text_small"
        android:text="I\'m Shakti will try to add you location to your emergency text."
        android:background="#FFFFFF"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
    <Button android:id="@+id/quick_sms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/shakti_blue"
        android:textColor="@color/shakti_white"
        android:layout_marginTop="10dp"
        android:text="@string/quick_sms"/>
    
    <ImageView android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
        android:src="@android:color/darker_gray"/>
    
    <Button android:id="@+id/emergency_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/shakti_blue"
        android:textColor="@color/shakti_white"
       	
        
        android:text="@string/emergency_contact"/>
   <!--  <ListView
        android:id="@+id/listView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:paddingTop="10dp">
    </ListView> -->

 		<ImageView android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
        android:src="@android:color/darker_gray"/>
    <CheckBox
        android:id="@+id/checkBox_playsound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Play Sound when Power Button Sequence is detected" />

</LinearLayout>
